# learning-machine-learning

./: README.md  notes.md  project.ipynb  pyproject.toml
labs/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab02_Multiple_Variable_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb  C1_W3_Logistic_Regression.ipynb
