[project]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Bohrer",email = "nbluisrs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
